[gd_scene load_steps=10 format=3 uid="uid://c5tl3m10s5tby"]

[ext_resource type="Texture2D" uid="uid://47bt3n56d3fc" path="res://bridges/assets/box_snake.png" id="1_c08hy"]
[ext_resource type="Script" path="res://bridges/script/drag_handler.gd" id="1_gtwqh"]
[ext_resource type="Script" path="res://bridges/script/dropzones_visibility.gd" id="3_fqrgl"]
[ext_resource type="Script" path="res://bridges/scenes/animals/forbidden_visibility.gd" id="3_i22jp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43xhd"]
size = Vector2(48, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2o3k"]
size = Vector2(48, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyvfn"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3mbg"]
size = Vector2(38, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f6euc"]
size = Vector2(38, 8)

[node name="snakeBod" type="StaticBody2D" node_paths=PackedStringArray("body_area2D") groups=["draggable", "snake"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_gtwqh")
body_area2D = NodePath("snake")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.87, 0.925)
texture = ExtResource("1_c08hy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_43xhd")

[node name="snake" type="Area2D" parent="." groups=["forbidden"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="snake"]
shape = SubResource("RectangleShape2D_i2o3k")

[node name="forbidden_Area2D" type="Area2D" parent="." groups=["bottom_dropzone", "forbidden"]]
script = ExtResource("3_i22jp")

[node name="forbidden_dropzone" type="StaticBody2D" parent="forbidden_Area2D" groups=["bottom_dropzone", "forbidden"]]
position = Vector2(26, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_fqrgl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="forbidden_Area2D/forbidden_dropzone"]
position = Vector2(-50, 11)
polygon = PackedVector2Array(40, -26, 40, -17, 49, -17, 49, -5, 40, -5, 40, 4, 60, 4, 60, -26)

[node name="ColorRect" type="ColorRect" parent="forbidden_Area2D/forbidden_dropzone"]
z_index = -1
offset_left = -10.0
offset_top = -15.0
offset_bottom = -5.0
scale = Vector2(2, 3)
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="forbidden_Area2D"]
position = Vector2(-23.3, 11)
polygon = PackedVector2Array(40, -26, 40, -17, 49, -17, 49, -5, 40, -5, 40, 4, 59, 4, 59, -26)

[node name="ColorRect" type="ColorRect" parent="forbidden_Area2D"]
z_index = -1
offset_left = 15.7
offset_top = -15.0
offset_right = 25.7
offset_bottom = -5.0
scale = Vector2(2, 3)
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="left_dropzone" type="StaticBody2D" parent="." groups=["dropable", "side_dropzone"]]
position = Vector2(-30, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_fqrgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_dropzone"]
shape = SubResource("RectangleShape2D_lyvfn")

[node name="ColorRect" type="ColorRect" parent="left_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="top_dropzone" type="StaticBody2D" parent="." groups=["dropable", "top_dropzone"]]
position = Vector2(-4, -10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_fqrgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_dropzone"]
shape = SubResource("RectangleShape2D_f3mbg")

[node name="ColorRect" type="ColorRect" parent="top_dropzone"]
z_index = -1
offset_left = -20.0
offset_top = -5.0
offset_right = -10.0
offset_bottom = 5.0
scale = Vector2(4, 1)
color = Color(1, 100, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="bottom_dropzone" type="StaticBody2D" parent="." groups=["bottom_dropzone", "dropable"]]
position = Vector2(-4, 10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_fqrgl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_dropzone"]
shape = SubResource("RectangleShape2D_f6euc")

[node name="ColorRect" type="ColorRect" parent="bottom_dropzone"]
z_index = -1
offset_left = -20.0
offset_top = -5.0
offset_right = -10.0
offset_bottom = 5.0
scale = Vector2(4, 1)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="snake" to="." method="_on_snake_body_entered"]
[connection signal="body_exited" from="snake" to="." method="_on_snake_body_exited"]
[connection signal="mouse_entered" from="snake" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="snake" to="." method="_on_area_2d_mouse_exited"]
