[gd_scene load_steps=10 format=3 uid="uid://bqtg1c4s2pkab"]

[ext_resource type="Script" path="res://bridges/script/drag_handler.gd" id="1_fk6ir"]
[ext_resource type="Texture2D" uid="uid://desp8tcpswyl4" path="res://bridges/assets/spider_10x10.png" id="2_fera1"]
[ext_resource type="Script" path="res://bridges/script/dropzones_visibility.gd" id="3_i8vs8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8jht"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bimj"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xjkc"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v5quv"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvc5n"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfceg"]
size = Vector2(8, 8)

[node name="spiderBod" type="StaticBody2D" node_paths=PackedStringArray("body_area2D") groups=["draggable", "spider"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fk6ir")
body_area2D = NodePath("spider")

[node name="Spider" type="Sprite2D" parent="."]
texture = ExtResource("2_fera1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m8jht")

[node name="spider" type="Area2D" parent="." groups=["animal_body"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="spider"]
shape = SubResource("RectangleShape2D_4bimj")

[node name="left_dropzone" type="StaticBody2D" parent="." groups=["dropable", "side_dropzone"]]
position = Vector2(-10, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_dropzone"]
shape = SubResource("RectangleShape2D_2xjkc")

[node name="ColorRect" type="ColorRect" parent="left_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="right_dropzone" type="StaticBody2D" parent="." groups=["dropable", "side_dropzone"]]
position = Vector2(10, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="ColorRect" type="ColorRect" parent="right_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_dropzone"]
shape = SubResource("RectangleShape2D_v5quv")

[node name="top_dropzone" type="StaticBody2D" parent="." groups=["dropable", "top_dropzone"]]
position = Vector2(0, -10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="ColorRect" type="ColorRect" parent="top_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_dropzone"]
shape = SubResource("RectangleShape2D_mvc5n")

[node name="bottom_dropzone" type="StaticBody2D" parent="." groups=["bottom_dropzone", "dropable"]]
position = Vector2(0, 10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="ColorRect" type="ColorRect" parent="bottom_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_dropzone"]
shape = SubResource("RectangleShape2D_cfceg")

[connection signal="body_entered" from="spider" to="." method="_on_spider_body_entered"]
[connection signal="body_exited" from="spider" to="." method="_on_spider_body_exited"]
[connection signal="mouse_entered" from="spider" to="." method="_on_spider_mouse_entered"]
[connection signal="mouse_exited" from="spider" to="." method="_on_spider_mouse_exited"]
